Week three added (Except workshop)

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,9 @@
 	path = src/ros_tutorials
 	url = https://github.com/ros/ros_tutorials.git
 	branch = foxy-devel
-[submodule "ros_tutorials"]
-	path = ros_tutorials
-	url = https://github.com/ros/ros_tutorials.git
-	branch = foxy-devel
+
+[submodule "src/joint_state_publisher"]
+	path = src/joint_state_publisher
+	url = https://github.com/ros/joint_state_publisher
+	branch = foxy
+
